--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -4,10 +4,10 @@ spring:
   datasource:
 
 
-    url: jdbc:mysql://${MSQLHOST}:${MSQLPORT}/${MYSQLDATABASE}  # URL de la base de données MySQL locale
-    driver-class-name: com.mysql.cj.jdbc.Driver  # Utilisation du driver MySQL
+    url: jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}
+    driver-class-name: com.mysql.cj.jdbc.Driver
     username: ${MYSQLUSER}
-    password: ${MYSQLPASSWORD}  # Pas de mot de passe pour root
+    password: ${MYSQLPASSWORD}
 
   jpa:
     show-sql: true # Affiche les requêtes SQL dans la console
